samples/istio/apigee-remote-service-envoy.yaml
# Example Deployment and Service for `apigee-remote-service-envoy` in Hybrid.
# Deployed into the apigee namespace where appropriate secrets reside.
# You must update the both `secretName:` values for your hybrid environment!
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigee-remote-service-envoy
  namespace: apigee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigee-remote-service-envoy
  template:
    metadata:
      labels:
        app: apigee-remote-service-envoy
        version: v1
    spec:
      containers:
      - name: apigee-remote-service-envoy
        image: "gcr.io/apigee-api-management-istio/apigee-remote-service-envoy:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        readinessProbe:
          exec:
            command: ["/grpc_health_probe", "-addr=:5000"]
          initialDelaySeconds: 5
        livenessProbe:
          exec:
            command: ["/grpc_health_probe", "-addr=:5000"]
          initialDelaySeconds: 10
        args:
          - --address=:5000
          - --log_level=debug
          - --config=/config/config.yaml
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
        volumeMounts:
        - mountPath: /config
          name: apigee-remote-service-envoy
          readOnly: true
        - mountPath: /opt/apigee/customer
          name: cwc-volume
          readOnly: true
        - mountPath: /opt/apigee/tls
          name: tls-volume
          readOnly: true
      volumes:
      - name: apigee-remote-service-envoy
        configMap:
          name: apigee-remote-service-envoy
      - name: cwc-volume
        secret:
          defaultMode: 420
          secretName: config-apigee-runtime-theganyo-apigee-test
      - name: tls-volume
        secret:
          defaultMode: 420
          secretName: apigee-runtime-theganyo-apigee-test-tls
---
apiVersion: v1
kind: Service
metadata:
  name: apigee-remote-service-envoy
  namespace: apigee
  labels:
    app: apigee-remote-service-envoy
spec:
  ports:
  - port: 5000
    name: grpc
  selector:
    app: apigee-remote-service-envoy
