samples/istio/hybrid-apigee-remote-service-envoy.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Example Deployment and Service for `apigee-remote-service-envoy` in Hybrid.
# Deployed into the apigee namespace where appropriate secrets reside.
# You must update the both `secretName:` values for your hybrid environment!
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigee-remote-service-envoy
  namespace: apigee
  annotations:
    sidecar.istio.io/rewriteAppHTTPProbers: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "5001"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
    prometheus.io/type: prometheusspec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigee-remote-service-envoy
  template:
    metadata:
      labels:
        app: apigee-remote-service-envoy
        version: v1
    spec:
      containers:
      - name: apigee-remote-service-envoy
        image: "gcr.io/apigee-api-management-istio/apigee-remote-service-envoy:latest"
        imagePullPolicy: Always # IfNotPresent
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5001
          failureThreshold: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5001
          failureThreshold: 30
          periodSeconds: 10
        args:
          - --log_level=debug
          - --config=/config/config.yaml
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
        volumeMounts:
        - mountPath: /config
          name: apigee-remote-service-envoy
          readOnly: true
        - mountPath: /opt/apigee/tls
          name: tls-volume
          readOnly: true
      volumes:
      - name: apigee-remote-service-envoy
        configMap:
          name: apigee-remote-service-envoy
      - name: tls-volume
        secret:
          defaultMode: 420
          secretName: apigee-runtime-theganyo-apigee-test-tls
---
apiVersion: v1
kind: Service
metadata:
  name: apigee-remote-service-envoy
  namespace: apigee
  labels:
    app: apigee-remote-service-envoy
spec:
  ports:
  - port: 5000
    name: grpc
  selector:
    app: apigee-remote-service-envoy
