samples/istio/proxy-service.yaml
# Example deployment for Apigee Proxy Service.
# This will work without modification for SaaS.
# For Hybrid, you must uncomment and properly configure the secret volumes.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apigee-proxy-envoy
  namespace: apigee
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apigee-proxy-envoy
        version: v1
    spec:
      containers:
      - name: apigee-proxy-envoy
        image: "apigee-proxy-envoy:latest"
        # image: "gcr.io/apigee-api-management-istio/apigee-proxy-envoy:latest"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
        # readinessProbe:
        #   exec:
        #     command: ["/grpc_health_probe", "-addr=:5000"]
        #   initialDelaySeconds: 5
        # livenessProbe:
        #   exec:
        #     command: ["/grpc_health_probe", "-addr=:5000"]
        #   initialDelaySeconds: 10
        args:
          - --address=:5000
          - --log_level=debug
          - --config=/config/config.yaml
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
        volumeMounts:
        - mountPath: /config
          name: apigee-proxy-envoy
          readOnly: true
      #   - mountPath: /opt/apigee/customer
      #     name: cwc-volume
      #     readOnly: true
      #   - mountPath: /opt/apigee/tls
      #     name: tls-volume
      #     readOnly: true
      volumes:
      - name: apigee-proxy-envoy
        configMap:
          name: apigee-proxy-envoy
      # - name: cwc-volume
      #   secret:
      #     defaultMode: 420
      #     secretName: REPLACE ME
      # - name: tls-volume
      #   secret:
      #     defaultMode: 420
      #     secretName: REPLACE ME
---
apiVersion: v1
kind: Service
metadata:
  name: apigee-proxy-envoy
  namespace: apigee
  labels:
    app: apigee-proxy-envoy
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: apigee-proxy-envoy
