samples/istio/request-authentication.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Creates a RequestAuthentication for httpbin.
# This causes Istio to evaluate JWT tokens passed to httpbin services.
# The `originIsOptional: true` flag will allow requests with missing or invalid JWTs
# to continue in case a valid x-api-key value can be evaluated by Apigee.
# Replaces authentication Policy in Istio 1.5+.

# You must update the issuer and jwks_uri for your environment.
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: httpbin-jwt
 namespace: default
spec:
  selector:
    matchLabels:
      app: httpbin
  jwtRules:
  - issuer: https://org-env.hybrid.e2e.apigeeks.net/remote-service/token
    jwksUri: https://org-env.hybrid.e2e.apigeeks.net/remote-service/certs
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: httpbin-jwt
 namespace: default
spec:
 selector:
   matchLabels:
     app: httpbin
 rules:
 - from:
   - source:
       requestPrincipals: ["*"]
